--- a/lektion-4/lektion-5/övning-1.html
+++ b/lektion-4/lektion-5/övning-1.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sebat sida</title>
+    <title>Registreringsformulär</title>
+    <link rel="stylesheet" href="/övning-1.html">
+    
 
-    <link rel="stylesheet" href="/style.css">
+
 </head>
 <body>
     
-    <h1>Sebat sida</h1>
-
-    <p>Detta är min första sida</p>
 </body>
 </html>
