--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -15,7 +15,7 @@
             <h1>Om mig</h1>
             <nav>
                 <ul>
-                    <li><a href="egen-projekt.html">Hem</a></li>
+                    <li><a href="index.html">Hem</a></li>
                     <li><a href="projects.html">Projekt</a></li>
                     <li><a href="skills.html">Färdigheter</a></li>
                 </ul>
