--- a/Portfolio/projects.html
+++ b/Portfolio/projects.html
@@ -14,7 +14,7 @@
             <h1>Projekt</h1>
             <nav>
                 <ul>
-                    <li><a href="egen-projekt.html">Hem</a></li>
+                    <li><a href="index.html">Hem</a></li>
                     <li><a href="about.html">Om mig</a></li>
                     <li><a href="skills.html">Färdigheter</a></li>
                 </ul>
