--- a/Portfolio/skills.html
+++ b/Portfolio/skills.html
@@ -14,7 +14,7 @@
             <h1>Färdigheter</h1>
             <nav>
                 <ul>
-                    <li><a href="egen-projekt.html">Hem</a></li>
+                    <li><a href="index.html">Hem</a></li>
                     <li><a href="about.html">Om mig</a></li>
                     <li><a href="projects.html">Projekt</a></li>
                 </ul>
